# shears

./: CMakeLists.txt  README.md  shears.cpp
